# TradeBot

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  config.yaml.example  pyproject.toml  requirements.txt
src/: auth.py  client.py  config.py  main.py  scheduler.py
src/data_feeds/: bls.py  fred.py
src/db/: connection.py  migrations.py  models.py
src/portfolio/: performance.py  positions.py
src/strategy/: executor.py  matcher.py  pricer.py  scanner.py  signals.py
tests/: conftest.py  test_signals.py
